--- a/src/components/common/ConfirmationModal/ConfirmationModal.module.scss
+++ b/src/components/common/ConfirmationModal/ConfirmationModal.module.scss
@@ -10,7 +10,7 @@
 
   // Add subtle emphasis to the message
   strong {
-    color: $cyber-cyan;
+    color: $vapor-cyan;
     font-weight: 600;
   }
 }
