--- a/src/components/ui/Input/Input.module.scss
+++ b/src/components/ui/Input/Input.module.scss
@@ -8,7 +8,7 @@
 
 .label {
   display: block;
-  font-family: $font-mono;
+  font-family: $font-display;
   font-size: 0.875rem;
   text-transform: uppercase;
   letter-spacing: 0.05em;
@@ -22,7 +22,7 @@
   }
 
   &.focused:not(.error) {
-    text-shadow: 0 0 5px rgba($cyber-neon-pink, 0.7);
+    text-shadow: 0 0 5px rgba($vapor-neon-pink, 0.7);
   }
 
   &.error {
@@ -43,15 +43,15 @@
 .input {
   width: 100%;
   padding: 0.5rem 0.75rem;
-  font-family: $font-mono;
-  background-color: $cyber-dark-blue;
-  color: $cyber-text-light;
-  border: 1px solid $cyber-neon-pink;
+  font-family: $font-display;
+  background-color: $vapor-dark-blue;
+  color: $vapor-text-light;
+  border: 1px solid $vapor-neon-pink;
   border-radius: 0;
   outline: none;
 
   &:focus {
-    box-shadow: $cyber-glow-pink;
+    box-shadow: $vapor-glow-pink;
   }
 
   &.disabled {
@@ -90,7 +90,7 @@
   bottom: 0;
   left: 0;
   height: 2px;
-  background-color: $cyber-neon-pink;
+  background-color: $vapor-neon-pink;
   transition: width $transition-slow ease;
 
   &.error {
@@ -117,8 +117,8 @@
   .scanline {
     width: 30%;
     height: 100%;
-    background-color: $cyber-neon-pink;
-    box-shadow: 0 0 10px $cyber-neon-pink;
+    background-color: $vapor-neon-pink;
+    box-shadow: 0 0 10px $vapor-neon-pink;
     animation: scanline 2s ease-in-out infinite;
 
     &.error {
