--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -70,7 +70,7 @@
   background-color: $bg-color;
   color: $text-color;
   border: 1px solid $border-color;
-  font-family: $font-mono;
+  font-family: $font-display;
   text-transform: uppercase;
   letter-spacing: 0.05em;
   padding: $spacing-sm $spacing-md;
