feat: Implement ProjectDetails component and update theme colors for error handling

--- a/src/components/apps/searchEngine/SearchEngine.module.scss
+++ b/src/components/apps/searchEngine/SearchEngine.module.scss
@@ -299,12 +299,12 @@
 }
 
 .errorIcon {
-  color: $cyber-warning-red;
+  color: $hacker-red;
   margin-bottom: 15px;
 }
 
 .errorTitle {
-  color: $cyber-warning-red;
+  color: $hacker-red;
   font-family: $font-display;
   font-size: 18px;
   font-weight: bold;
