--- a/src/components/apps/searchEngine/WebContent.module.scss
+++ b/src/components/apps/searchEngine/WebContent.module.scss
@@ -278,12 +278,12 @@
 }
 
 .errorIcon {
-  color: $cyber-warning-red;
+  color: $hacker-red;
   margin-bottom: 15px;
 }
 
 .errorText {
-  color: $cyber-warning-red;
+  color: $hacker-red;
   font-family: $font-display;
   font-size: 14px;
   text-align: center;
