--- a/src/components/ui/Input/Input.module.scss
+++ b/src/components/ui/Input/Input.module.scss
@@ -26,7 +26,7 @@
   }
 
   &.error {
-    color: $cyber-warning-red;
+    color: $hacker-red;
   }
 
   &.darkHacker {
@@ -60,10 +60,10 @@
   }
 
   &.error {
-    border-color: $cyber-warning-red;
+    border-color: $hacker-red;
 
     &:focus {
-      box-shadow: 0 0 10px rgba($cyber-warning-red, 0.4);
+      box-shadow: 0 0 10px rgba($hacker-red, 0.4);
     }
   }
 
@@ -72,7 +72,7 @@
     border-color: $hacker-green;
 
     &:focus {
-      box-shadow: $cyber-glow-green;
+      box-shadow: $vapor-glow-green;
     }
 
     &.error {
@@ -94,7 +94,7 @@
   transition: width $transition-slow ease;
 
   &.error {
-    background-color: $cyber-warning-red;
+    background-color: $hacker-red;
   }
 
   &.darkHacker {
@@ -122,8 +122,8 @@
     animation: scanline 2s ease-in-out infinite;
 
     &.error {
-      background-color: $cyber-warning-red;
-      box-shadow: 0 0 10px $cyber-warning-red;
+      background-color: $hacker-red;
+      box-shadow: 0 0 10px $hacker-red;
     }
 
     &.darkHacker {
@@ -140,7 +140,7 @@
 
 .errorMessage {
   margin-top: 0.25rem;
-  color: $cyber-warning-red;
+  color: $hacker-red;
   font-size: 0.75rem;
 
   &.darkHacker {
